tests/errors/surf_parse_05.ki
# PARSER: a while-loop header with a body that is not indented
while 1 < 2:
pass